# line-poc

./: PLAN.md  QUICKSTART.md  pyproject.toml  requirements.txt
config/: lineage_schema.yaml
lineage_poc/: main.py
lineage_poc/client/: session.py
lineage_poc/config/: settings.py
lineage_poc/schema/: lineage_record.py
lineage_poc/skills/: call_graph.py  prescanner.py
lineage_poc/skills/_base/: SKILL.md
lineage_poc/skills/cobol_aps/: SKILL.md  ast_parser.py
lineage_poc/skills/java/: SKILL.md  ast_parser.py
lineage_poc/skills/python/: SKILL.md  ast_parser.py
lineage_poc/tools/: csv_converter.py  lineage_tools.py  progress.py  verification.py
test_fixtures/java_sample/src/main/java/com/example/lineage/controller/: UserController.java
test_fixtures/java_sample/src/main/java/com/example/lineage/dao/: UserDAO.java
test_fixtures/java_sample/src/main/java/com/example/lineage/dto/: UserDTO.java
test_fixtures/java_sample/src/main/java/com/example/lineage/model/: User.java
test_fixtures/java_sample/src/main/java/com/example/lineage/service/: UserService.java
test_fixtures/python_sample/api/: endpoints.py  models.py
test_fixtures/python_sample/etl/: pipeline.py
